# SPIS-100

./: #arrow.cpp#  #node.cpp#  #runtime.cpp#  .gitignore  CMakeLists.txt  Makefile  README.md  SPIS-100  a.out  arrow.cpp  arrow.h  consoleInput.cpp  consoleOutput.cpp  example.lvl  file.cpp  inputConsole.cpp  inputList.cpp  io.cpp  io.h  listInput.cpp  listOutput.cpp  main.cpp  node.cpp  node.h  node.h~  runtime.cpp  spis  spis.h  system.cpp  testfile.cpp  testui.cpp  visualOutput.cpp
tests/: code.txt
